--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      hello
+      <p>我是p标签</p>
+    </div>
   </body>
   <script src="/dist/umd/vue.js"></script>
   <script>
@@ -13,6 +16,18 @@
       data() {
         return {
           message: "aaa",
+          address: "address",
+          user: {
+            name: [
+              { a: 1 },
+              { b: 1 },
+              { b: 1 },
+              { b: 1 },
+              { b: 1 },
+              { b: 1 },
+              { b: 1 },
+            ],
+          },
         };
       },
       computed: {
@@ -26,5 +41,8 @@
         },
       },
     });
+    vm._data.user.name.splice(1, 2, "1");
+    vm._data.user.name.push("111");
+    console.log(vm._data);
   </script>
 </html>
