--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <div id="app">
-      hello
-      <p>我是p标签</p>
+    <div id="app" style="color: red; background: blue">
+      <p>hello1{{name}}hello2{{address}}hello3</p>
     </div>
   </body>
   <script src="/dist/umd/vue.js"></script>
@@ -15,8 +14,8 @@
       el: "#app",
       data() {
         return {
-          message: "aaa",
-          address: "address",
+          name: "name1",
+          address: "address1",
           user: {
             name: [
               { a: 1 },
@@ -43,6 +42,6 @@
     });
     vm._data.user.name.splice(1, 2, "1");
     vm._data.user.name.push("111");
-    console.log(vm._data);
+    console.log(vm.name);
   </script>
 </html>
