--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
       data() {
         return {
           name: "name",
-          address: "address",
+          address: {
+            address: "address",
+          },
           user: {
             name: [
               { a: 1 },
