--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,18 @@
           },
         };
       },
+      beforeCreate() {
+        console.log("beforeCreate", this.name);
+      },
+      created() {
+        console.log("created", this.name);
+      },
+      beforeMount() {
+        console.log("beforeMount", this.$el);
+      },
+      mounted() {
+        console.log("mounted", this.$el);
+      },
       computed: {
         messageCom() {
           return 1;
