--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="app" style="font-size: 40px; color: red; background: blue">
-      <p>{{name}}</p>
+      <p>{{name}}{{name}}{{name}}{{name}}</p>
     </div>
   </body>
   <script src="/dist/umd/vue.js"></script>
