--- a/src/example/css/flex.html
+++ b/src/example/css/flex.html
@@ -9,25 +9,15 @@
         margin: 0;
         padding: 0;
     }
-    .as-flex{
-        display: flex;
-    }
     .item-1{
-        flex-grow: 1;
-        flex-shrink: 1;
         height: 100px;
+        width: 100px;
+        background: red;
     }
     .item-2{
-        flex-grow: 1;
-        flex-shrink: 1;
-        flex-basis: 400px;
         height: 100px;
-    }
-    .flex-basis-100{
-        flex-basis: 1100px;
-    }
-    .flex-basis-200{
-        flex-basis: 200px;
+        width: 100px;
+        background: green;
     }
     .pink{
         background: pink;
@@ -43,14 +33,11 @@
 
   <body>
     <div class="as-flex">
-        <div class="item-1 pink">
-            <span>1 2 3 4 5 6 7 8 9</span>
+        <div class="item-1">
+           萨代大四段
         </div>
-        <div class="item-2 lightblue">
-            <span>1 2 3 4 5 6 7 8 9 </span>
-        </div>
-        <div class="item-1 lightgray">
-            <span>1 2 3 4 5 6 7 8 9</span>
+        <div class="item-2">
+            是大家都iadoai
         </div>
     </div>
   </body>
