--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="app" style="font-size: 40px; color: red; background: blue">
-      {{comName}}
+      {{array}}
     </div>
   </body>
   <!--@代表src-->
@@ -66,9 +66,9 @@
     Vue.delete(vm.address, '11');
     vm.comName;
     vm.comName;
-    console.log('一开始==', vm.comName);
-    vm.name = 'guohaiping';
-    console.log('最后==', vm.comName);
+    // console.log('一开始==', vm.comName);
+    // vm.name = 'guohaiping';
+    // console.log('最后==', vm.comName);
     // vm.age = 14;
     // vm.name = "dlz";
     // Vue.set(vm.noUpdateData, "country", "shand1ong");
