--- a/src/example/css/flex.html
+++ b/src/example/css/flex.html
@@ -5,40 +5,31 @@
     <meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1" />
     <title>debounce</title>
     <style>
-     *{
-        margin: 0;
-        padding: 0;
-    }
-    .item-1{
-        height: 100px;
-        width: 100px;
-        background: red;
-    }
-    .item-2{
-        height: 100px;
-        width: 100px;
-        background: green;
-    }
-    .pink{
+      .container {
+        position: fixed;
+        width: 30px;
+        height: 30px;
+        margin: 20px;
+        border: 10px solid red;
+        padding: 10px;
+        background: blue;
+      }
+      .inner {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        top: 0;
+        left: 0;
         background: pink;
-    }
-    .lightblue{
-        background: lightblue;
-    }
-    .lightgray{
-        background: lightgray
-    }
+      }
     </style>
   </head>
 
   <body>
-    <div class="as-flex">
-        <div class="item-1">
-           萨代大四段
-        </div>
-        <div class="item-2">
-            是大家都iadoai
-        </div>
+    <div>
+      <div class="container">
+        <div class="inner"></div>
+      </div>
     </div>
   </body>
 </html>
