--- a/src/example/js/index.html
+++ b/src/example/js/index.html
@@ -11,7 +11,6 @@
         line-height: 200px;
         text-align: center;
         color: #fff;
-        background-color: #444;
         font-size: 30px;
       }
     </style>
@@ -19,8 +18,6 @@
 
   <body>
     <div id="container"></div>
-    <!-- <div id="button">取消防抖</div> -->
-    <!-- <script src="debounce.js"></script> -->
-    <script src="throttle.js"></script>
+    <script src="debounce.js"></script>
   </body>
 </html>
